# adwaitam

./: .gitignore  README.md  hello.py  pyproject.toml
business_diagnostic/: README.md  pyproject.toml
business_diagnostic/src/business_diagnostic/: crew.py  main.py
business_diagnostic/src/business_diagnostic/config/: agents.yaml  tasks.yaml
neuro-tools/: hello.py  pyproject.toml
neuro-vault/: config.yaml  pyproject.toml
neuro-vault/src/NeuroVault/: server.py  vault.py
