[project]
name = "business_diagnostic"
version = "0.1.0"
description = "business_diagnostic using crewAI"
authors = [{ name = "Sathrukkan Kandasamy", email = "sathrukkan.Kandasamy@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "markdown-pdf>=1.3.2",
]

[project.scripts]
business_diagnostic = "business_diagnostic.main:run"
run_crew = "business_diagnostic.main:run"
train = "business_diagnostic.main:train"
replay = "business_diagnosticl.main:replay"
test = "business_diagnostic.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
