[project]
name = "neuro-vault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepgram-sdk>=3.7.7",
    "embedchain>=0.1.125",
    "fastapi>=0.115.6",
    "google-generativeai>=0.8.3",
    "moviepy>=2.1.1",
    "pinecone-client>=5.0.1",
    "pinecone-text>=0.9.0",
    "python-multipart>=0.0.20",
    "youtube-transcript-api>=0.6.3",
]
